0.2.3
- added support for Jython 2.5.

- cache module now uses Beaker's clsmap to get at 
container classes, so cache types such as 
"ext:google", "ext:sqla", etc. are available.  
memcached is available as both "ext:memcached" and
"memcached", the latter for backwards compatibility.
This requires Beaker>=1.0.1.

- fixed the html_error_template not handling tracebacks from
normal .py files with a magic encoding comment [ticket:88]

- added ModuleTemplate class, which allows the construction
of a Template given a Python module generated by a previous
Template.   This allows Python modules alone to be used
as templates with no compilation step.   Source code
and template source are optional but allow error reporting
to work correctly.

- fixed Python 2.3 compat. in mako.pyparser [ticket:90]

- fix Babel 0.9.3 compatibility; stripping comment tags is now
  optional (and enabled by default).


0.2.2
- cached blocks now use the current context when rendering
an expired section, instead of the original context
passed in [ticket:87]
- fixed a critical issue regarding caching, whereby 
a cached block would raise an error when called within a
cache-refresh operation that was initiated after the 
initiating template had completed rendering.

0.2.1
- fixed bug where 'output_encoding' parameter would prevent 
render_unicode() from returning a unicode object.
- bumped magic number, which forces template recompile for 
this version (fixes incompatible compile symbols from 0.1 
series).
- added a few docs for cache options, specifically those that
help with memcached.

0.2.0
- Speed improvements (as though we needed them, but people
  contributed and there you go):

  - added "bytestring passthru" mode, via
    `disable_unicode=True` argument passed to Template or
    TemplateLookup. All unicode-awareness and filtering is
    turned off, and template modules are generated with
    the appropriate magic encoding comment. In this mode,